# monte-carlo-options-experiment

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RESULTS.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: pages.yml  tests.yml
benchmarks/: performance.csv  performance.md
dashboard/: app.js  data.json  index.html  styles.css
docs/: api.md  examples.md  index.md  methodology.md  results.md
examples/: compare_variance_reduction.py  implied_vol_smile.py  price_american_put.py  price_barrier_option.py  price_european_call.py  simulate_heston_paths.py
notebooks/: 01_black_scholes_validation.ipynb  02_convergence_analysis.ipynb  03_asian_options_and_variance_reduction.ipynb
scripts/: benchmark_performance.py  generate_dashboard_data.py  generate_figures.py  run_experiments.py  serve_dashboard.py
src/mc_options/: __init__.py  american.py  asian_benchmarks.py  barrier_analytical.py  black_scholes.py  calibration.py  cli.py  greeks.py  implied_vol.py  models.py  payoffs.py  plots.py  pricer.py  simulation.py  stochastic_vol.py  variance_reduction.py
tests/: test_advanced_models.py  test_asian_benchmarks.py  test_black_scholes.py  test_cli.py  test_greeks.py  test_implied_vol.py  test_models.py  test_payoffs.py  test_pricer.py  test_simulation.py  test_variance_reduction.py
